# src/controllers/filmController.js
@@ -2,8 +2,6 @@ import Film from "../models/filmModel.js";
 
 export const filmFunction = async (req, res) => {
   const { file, body } = req;
-  console.log(body);
-
   await Film.create({
     avatar: file.originalname,
     title: body.title,
@@ -20,4 +18,22 @@ export const filmFunction = async (req, res) => {
 export const getFilm = async (req, res) => {
   const allFilm = await Film.find();
   res.status(200).json(allFilm);
+};
+
+export const tooggleBooked = async (req, res) => {
+  const { isBookmarked } = req.body;
+  try {
+    const { id } = req.params;
+    const booked = await Film.findOne({ id });
+    if (!booked) {
+      res.status(404).json({ message: "Film not found" });
+      return;
+    }
+    booked.isBookmarked = isBookmarked;
+    await booked.save();
+    res.status(200).json({ message: "Bookmarked changed" });
+  } catch (error) {
+    console.log(error);
+    res.status(500).json({ message: "It's an error", error });
+  }
 };
